kubernetes/media/immich-kiosk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-kiosk
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich-kiosk
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-kiosk
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: immich-kiosk
          image: ghcr.io/damongolding/immich-kiosk:0.35.0
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
              ephemeral-storage: 8Gi
            limits:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config-file
              mountPath: "/config"
      volumes:
        - name: config-file
          secret:
            secretName: immich-kiosk-secret
            items:
              - key: config.yaml
                path: config.yaml
