kubernetes/media/immich-kiosk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
  namespace: immich
  labels:
    app: immich-kiosk
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: immich-kiosk
