kubernetes/media/immich-kiosk/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-kiosk-http-route
  namespace: immich
  annotations:
  labels:
    app: immich-kiosk
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "photo-frame.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-kiosk
          port: 3000
