kubernetes/media/immich-kiosk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-kiosk-ingress
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - &host photo-frame.mcmumf.dev
      secretName: photo-frame.mcmumf.dev-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-kiosk
                port:
                  number: 3000
